frontend/tests/errors/ER-004/cannot_export_generic/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Generic constraint violations are reported as compile-time errors | Generic constraint violation: cannot export generic function


&^identity(x) {
    x;
}

&^main() -> #i32 {
    identity(1);
}
